fixed 'Specchietto' long data truncation problem - #2

--- a/custom/modules/mkt_AccountExtras/tpls/rawdata.css
+++ b/custom/modules/mkt_AccountExtras/tpls/rawdata.css
@@ -11,8 +11,17 @@ h1, h2, h3, h4, h5, h6
 pre.debug{
     background: #ffdbe0;
     color: #560000;
+    padding:5px;
+    /*
     word-wrap: break-word;
     white-space: normal;
+    */
+}
+pre.debug .h1{
+    font-size: 24px;
+    text-align: center;
+    border-bottom: 1px dashed #560000;
+    padding-bottom: 12px;
 }
 
 .txt-right{text-align: right;}
